Mejorada la calidad de la página web gracias a las correcciones de Erena

--- a/faq.html
+++ b/faq.html
@@ -11,7 +11,7 @@
 	<meta property="og:title" content="Glowtranslations - FAQ"/>
 	<meta property="og:description" content="FAQ de GlowTranslations."/>
 	<meta property="og:image" content="http://glowtranslations.tk/images/metaindex.png"/>
-	<title>GlowTranslations</title>
+	<title>GlowTranslations - FAQ</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/progress.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -58,26 +58,26 @@ window.cookieconsent.initialise({
 			<div class="content-title">Sobre GlowTranslations</div>
 			<div class="content">
                 <img onload="this.style.opacity='1';" style="width: 860px; height: 350px; text-align: center;" src="images/faq.jpg" ><br>
-				Somos un grupo de fans que disfrutan jugando a videojuegos pero les duele ver que una gran parte de esos videojuegos no vienen en español, haciendo que mucha gente no pueda disfrutarlos como es debido por la barrera del idioma.<br><br>
-				Nuestra misión es facilitar a los usuarios el poder disfrutar de esos juegos, ya que tienen historias que quieren ser contadas, tienen una jugabilidad que quiere ser disfrutada, pero el que un juego esté en inglés impide a mucha gente el poder disfrutarlos.
-				Así que nos dedicamos a traducir esos juegos para que tú y todo el mundo puedan disfrutarlo.<br><br>
+				Somos un grupo de fans que disfruta jugando a videojuegos, pero a los que les duele ver que una gran parte de éstos no están disponibles en español, haciendo que mucha gente no pueda disfrutarlos como es debido por la barrera del idioma.<br><br>
+				Nuestra misión es facilitar a los usuarios el poder divertirse con estos videojuegos, ya que tienen historias que quieren ser contadas y una jugabilidad que quiere ser disfrutada.
+				Así que nos dedicamos a traducir esos juegos para que tú y todo el mundo podáis acceder a ellos.<br><br>
 				<div class="title"><h1>Nuestros proyectos</h1></div>
-				Ahora mismo estamos trabajando en nuestros proyectos, por ahora estamos traduciendo del inglés al español los juegos <a href="translations/runefactory4/informacion.html">«Rune Factory 4»</a>, <a href="translations/lordofmagna/informacion.html">«Lord of Magna: Maiden Heaven»</a> y <a href="translations/persona4/informacion.html">«Shin Megami Tensei: Persona 4»</a>, unos juegos que salieron en japonés y en inglés pero no en español. <br><br>
-				Acabamos de terminar la traducción de <a href="translations/stellaglow/informacion.html">Stella Glow</a>, prácticamente un año y poco hemos tardado en traducirlo, lo hemos probado y funciona bien, es fácil de aplicar el parche, y te permitirá disfrutar el juego en español.<br><br>
+				Ahora mismo estamos trabajando en nuestros proyectos: estamos traduciendo del inglés al español los juegos <a href="translations/runefactory4/informacion.html">«Rune Factory 4»</a>, <a href="translations/lordofmagna/informacion.html">«Lord of Magna: Maiden Heaven»</a> y <a href="translations/persona4/informacion.html">«Shin Megami Tensei: Persona 4»</a>, que salieron en japonés y en inglés, pero no en nuestro idioma. <br><br>
+				Acabamos de terminar la traducción de <a href="translations/stellaglow/informacion.html">Stella Glow</a>; hemos tardado prácticamente un año y poco en traducirlo. Lo hemos probado y funciona bien, el parche es fácil de aplicar, y te permitirá disfrutar el juego en español.<br><br>
 				Posiblemente tenga errores gramaticales, alguna que otra frase en un español que no sea neutro, o alguna palabra fuera de contexto, pero no somos profesionales, así que es normal.<br><br>
-				Si encuentras un error, revisa la sección de "información" del juego especifico para ayudarnos a arreglar errores y lo arreglaremos lo antes posible.
+				Si encuentras un error, revisa la sección de información del juego específico para ayudarnos a arreglarlo. Nos ocuparemos de él lo antes posible.
 				<div class="title"><h1>¿Qué significa que formamos parte de TraduSquare?</h1></div>
-				TraduSquare es una comunidad y portal de información que hemos formado los fan traductores de videojuegos al habla hispana de todo el mundo.<br>
-				Deseamos ayudarnos entre nosotros para poder realizar traducciones más profesionales para nuestros fans y también para crear un portal donde reunir todas las traducciones, información y mirrors de descarga de los parches para
-				tener un punto de partida donde poder informarse y disfrutar de tus juegos favoritos traducidos al español. <br><br>
+				TraduSquare es una comunidad y portal de información que hemos formado los fans traductores de videojuegos al español de todo el mundo.<br>
+				Deseamos ayudarnos entre nosotros para poder realizar traducciones cada vez más profesionales, así como crear un portal donde reunir todas las traducciones, información y mirrors de descarga de los parches. <br>
+				De esta forma podrás disfrutar con más facilidad de tus juegos favoritos traducidos al español <br><br>
 				<center><a href="https://tradusquare.es/"><img style="width: 480px; height: 270px; text-align: center;" onload="this.style.opacity='1';" src="images/tradusquare.png" ></a></center>
 				<div class="title"><h1>¿Por qué no aceptamos donaciones?</h1></div>
-				Gracias por querer contribuir por nuestras traducciones, pero en vez de donar tu dinero a nosotros, usa ese dinero en cosas que realmente te hagan falta para el día a día (y más sobre estas fechas que está la economía fatal).<br><br>
-				Nos alegra un montón que quieras donarnos una mínima cantidad de dinero, pero nosotros hacemos esto porque queremos que todo el mundo disfrute de los videojuegos en su idioma nativo (en este caso en español) y son proyectos hechos por fans para fans y sin ánimo de lucro :D<br><br>
-				Hacemos esto porque mayormente, somos estudiantes y queremos aprender gracias a este fansub para mejorar nuestras bases y... Quién sabe si en un futuro alguien de aquí trabaja en alguna compañía de videojuegos como traductor ^^<br><br>
-				Por último, el hosting de la web que usamos es GitHub, es gratuito y es open source <a href="https://github.com/Glowtranslations">(pulse aquí para ver nuestro repositorio)</a> junto con un dominio gratuito .tk, por eso tampoco necesitamos donaciones ni publicidad para que la web se mantenga viva ^^<br><br>
+				Gracias por querer contribuir por nuestras traducciones, pero en vez de donarnos tu dinero, úsalo en cosas que realmente te hagan falta para el día a día (y más en estas fechas, que la economía está fatal).<br><br>
+				Nos alegra un montón que quieras donarnos una mínima cantidad de dinero, pero nosotros hacemos esto porque queremos que todo el mundo disfrute de los videojuegos en su idioma nativo (en este caso en español) y son proyectos hechos por fans para fans y sin ánimo de lucro :D.<br><br>
+				Hacemos esto principalmente porque somos estudiantes y queremos aprender y mejorar nuestras bases con este fansub. Además, quién sabe si en un futuro alguien de aquí trabaja en alguna compañía de videojuegos como traductor ^^.<br><br>
+				Por último, el hosting de la web que usamos es GitHub. Es gratuito y open source <a href="https://github.com/Glowtranslations">(pulsa aquí para ver nuestro repositorio)</a>; además, el dominio .tk tampoco cuesta dinero, así que no necesitamos donaciones ni publicidad para que la web se mantenga viva ^^.<br><br>
 				<div class="title"><h1>¡A disfrutar!</h1></div>
-				Si estás aquí es porque te interesa algún juego que hemos traducido o porque nos quieres hacer una reclamación de derechos de autor, en cualquier caso, en la sección de traducciones tienes todos nuestros proyectos con links de descarga de los parches para traducir el juego. <br>
+				Si estás aquí es porque te interesa algún juego que hemos traducido o porque nos quieres hacer una reclamación de derechos de autor; en cualquier caso, en la sección de traducciones tienes todos nuestros proyectos con links de descarga de los parches para traducir el juego. <br>
 				<center><img onload="this.style.opacity='1';" src="images/girls.png" ></center>
 				<p style="text-align: center; font-size: 24px; font-weight: bold; text-decoration: underline;">¡Disfrutad de nuestras traducciones!</p>
 			</div>
