--- a/miembros.html
+++ b/miembros.html
@@ -56,7 +56,7 @@ window.cookieconsent.initialise({
 		<div class="content-container">
 			<div class="content-title">Miembros de GlowTranslations</div>
 			<div class="content">
-				Aquí se localiza el "Hall of Fame" de los miembros actuales de GlowTranslations, los que han hecho y están haciendo posible que las traducciones y proyectos que estás disfrutando sean posibles. <br> <br>
+				Aquí se localiza el "Hall of Fame" de los miembros actuales de GlowTranslations, los que han hecho y están haciendo un esfuerzo para que las traducciones y proyectos que estás disfrutando sean posibles. <br> <br>
 				<div class="member-container"style="background: linear-gradient(#aaa, #ccc, #aaa);">
 					<div class="member-avatar" style="background-image: url('images/avatars/Darkmet.jpg')"></div>
 					<div class="member-name "style="background-color: #4f7cfe;">Darkmet</div>
