--- a/translations/persona4/informacion.html
+++ b/translations/persona4/informacion.html
@@ -58,16 +58,16 @@ window.cookieconsent.initialise({
 			<div class="content-title">¡Shin Megami Tensei: Persona 4 en español!</div>
 			<div class="content">
     <img onload="this.style.opacity='1';" src="../../images/p4-info.png" style="float: right; margin-right: -30px;">
-    Finalizando el 2017, terminando ya la traducción de Lord Of Magna: Maiden Heaven, empezamos con la traducción de uno de los mejores juegos de PS2: Shin Megami Tensei: Persona 4. <br>
-    Shin Megami Tensei: Persona 4, uno de los principales títulos de la rama «Persona» salio en PS2 el 10 de Julio en 2008 y ahora, el 24 de Diciembre de 2017, comienza su traducción al español.   <br><br>
-    Esta traducción estará en conjunto con la de Rune Factory 4 y es un proyecto que colabora TraduSquare <br>
+    El 2017 ya acaba, al igual que nosotros terminamos la traducción de Lord of Magna: Maiden Heaven. Por ello, empezamos con la traducción de uno de los mejores juegos de PS2: Shin Megami Tensei: Persona 4. <br>
+    Shin Megami Tensei: Persona 4, uno de los principales títulos de la rama «Persona», salió en PS2 el 10 de Julio en 2008 y ahora, el 24 de diciembre de 2017, comienza su traducción al español.   <br><br>
+    Esta traducción es un proyecto que en el que colabora TraduSquare y se hará al mismo tiempo que la de Rune Factory 4. <br>
 	<center><a href="https://tradusquare.es/"><img style="width: 280px; height: 140px; text-align: center;" onload="this.style.opacity='1';" src="../../images/tradusquare.png" ></a></center>
     <div class="title"><h1>¿Habrá Demo como en el Stella Glow?</h1></div>
-    Siendo un juego de PS2, pocas veces hay demos que se distribuyen de manera gratuita, pero por desgracia, este juego no contiene una demo así que no podemos distribuir una demo traducida.<br>
+    Siendo un juego de PS2, pocas veces hay demos que se distribuyan de manera gratuita, pero, por desgracia, este juego no contiene una demo así que no podemos distribuir una demo traducida.<br>
     <div class="title"><h1>¿Cuánto durará la traducción?</h1></div>
-    El otro día llamamos a el servicio técnico de nuestra bola de cristal, la suya también esta estropeada y no son capaces de predecir cuándo vendrán a arreglar la nuestra, así que solo podemos decir que estará tan pronto como lo terminemos, tres meses, un año, una década, no lo sabemos, pero lo que sí sabemos es que cuanta más gente ayude antes estará :P<br>
+    El otro día llamamos a el servicio técnico de nuestra bola de cristal; la suya también esta estropeada y no son capaces de predecir cuándo vendrán a arreglar la nuestra. Así pues, solo podemos decir que la traducción estará tan pronto como la terminemos: tres meses, un año, una década… No lo sabemos, pero lo que sí sabemos es que cuanta más gente ayude, antes estará :P<br>
     <br>Aun así, si tanto te gusta el juego, puedes seguirnos en nuestra cuenta de <a href="https://www.twitter.com/glowtranslate">Twitter</a>.<br>
-   	<div class="title"><h1>¿Donde puedo adquirir el juego?</h1></div>
+   	<div class="title"><h1>¿Dónde puedo adquirir el juego?</h1></div>
 	El juego lo puedes adquirir en físico.
 		<ul>
 			<li><a href="https://www.amazon.es/Persona-4-PS2-Importación-inglesa/dp/B001Q9EK82/">Amazon EUR (Físico)</a>
