--- a/translations/runefactory4/informacion.html
+++ b/translations/runefactory4/informacion.html
@@ -58,18 +58,18 @@ window.cookieconsent.initialise({
 			<div class="content-title">¡Rune Factory 4 en español!</div>
 			<div class="content">
     <img onload="this.style.opacity='1';" src="../../images/rune-info.png" style="float: right; margin-right: -30px;">
-    Acabado el proyecto de Stella Glow, nos ponemos manos a la obra con otro, un juego que seguro que mucha gente le gustaría jugar en español. <br>
-    Rune Factory 4, una saga de videojuegos de Nintendo que ha hecho su última aparición en Nintendo 3DS. <br><br>
-      Ya lo tenemos todo listo para empezar, solo le tenemos que echar valor y al toro, pero no nos vendría mal algo de apoyo para traducirlo lo antes posible, asi que si te ves ganas... <br>
+    Como ya hemos acabado el proyecto de Stella Glow, nos ponemos manos a la obra con otro, que es un juego que seguro que a mucha gente le gustaría jugar en español:  <br>
+	Rune Factory 4. Rune Factory es una saga de videojuegos de Nintendo que ha hecho su última aparición en Nintendo 3DS. <br><br>
+	<!--Ya lo tenemos todo listo para empezar, solo le tenemos que echar valor y al toro, pero no nos vendría mal algo de apoyo para traducirlo lo antes posible, asi que si te ves ganas... <br>
     ¿Por qué no intentas entrar en el grupo de traducción?
     <div class="title"><h1>¿Cómo participar?</h1></div>
-    Si te gusta el juego, odias que no vengan traducidos, sabes inglés y eres un purista de la perfección, te queremos en nuestro grupo. <br>Si quieres entrar a formar parte de nuestro proyecto envíanos un email con los detalles que encontrarás en el apartado "<a href="participa.html">Participa</a>".
-    <div class="title"><h1>¿Habrá Demo como en el Stella Glow?</h1></div>
-    Al parecer, alguien del equipo de desarrollo de Rune Factory 4 decidió que no hace falta una demostración del juego, una pena la verdad, por desgracia no hacemos milagros, por lo que no podemos hacer un parche para una demo que no existe, pero bueno, cuanto más gente se anime, antes terminaremos la traducción.<br>
+    Si te gusta el juego, odias que no vengan traducidos, sabes inglés y eres un purista de la perfección, te queremos en nuestro grupo. <br>Si quieres entrar a formar parte de nuestro proyecto envíanos un email con los detalles que encontrarás en el apartado "<a href="participa.html">Participa</a>".-->
+	<div class="title"><h1>¿Habrá Demo, como en el Stella Glow?</h1></div>
+    Al parecer, alguien del equipo de desarrollo de Rune Factory 4 decidió que no hacía falta una demostración del juego. Una pena, la verdad. Por desgracia, no hacemos milagros, por lo que no podemos hacer un parche para una demo que no existe. Eso sí: cuanta más gente se anime, antes terminaremos la traducción.<br>
     <div class="title"><h1>¿Cuánto durará la traducción?</h1></div>
-    El otro día llamamos a el servicio técnico de nuestra bola de cristal, la suya también esta estropeada y no son capaces de predecir cuándo vendrán a arreglar la nuestra, así que solo podemos decir que estará tan pronto como lo terminemos, tres meses, un año, una década, no lo sabemos, pero lo que sí sabemos es que cuanta más gente ayude antes estará :P<br>
+    El otro día llamamos a el servicio técnico de nuestra bola de cristal; la suya también esta estropeada y no son capaces de predecir cuándo vendrán a arreglar la nuestra. Así pues, solo podemos decir que la traducción estará tan pronto como la terminemos: tres meses, un año, una década… No lo sabemos, pero lo que sí sabemos es que cuanta más gente ayude, antes estará :P<br>
     <br>Aun así, si tanto te gusta el juego, puedes seguirnos en nuestra cuenta de <a href="https://www.twitter.com/glowtranslate">Twitter</a>.<br>
-   	<div class="title"><h1>¿Donde puedo adquirir el juego?</h1></div>
+   	<div class="title"><h1>¿Dónde puedo adquirir el juego?</h1></div>
 	El juego lo puedes adquirir de manera digital o en físico.
 		<ul>
 			<li><a href="https://www.amazon.com/Rune-Factory-4-Nintendo-3DS/dp/B00BAWXD88/">Amazon USA (Físico)</a>
