--- a/translations/stellaglow/informacion.html
+++ b/translations/stellaglow/informacion.html
@@ -57,12 +57,12 @@ window.cookieconsent.initialise({
 			<div class="content-title">¡Stella Glow en español!</div>
 			<div class="content">
 				<img onload="this.style.opacity='1';" src="../../images/stella-info.png" style="float: right;">
-				Después de año y medio, por fin podemos decir que Stella Glow ya está traducido al español, sip, así es. <br><br>
-				Hemos tardado un año y medio, entre discusiones, problemas, gente que viene, gente que se va, malos y buenos momentos, uno de esos buenos momentos fue el día que dijimos... <br><br>
+				Después de año y medio, por fin podemos decir que Stella Glow ya está traducido al español. Sip, así es. <br><br>
+				Hemos tardado un año y medio, entre discusiones, problemas, gente que viene, gente que se va y malos y buenos momentos. Hablando de buenos momentos, uno de ellos fue el día que dijimos... <br><br>
 				¡Ya hemos terminado! <br><br>
-				Una vez terminado ya estábamos buscando un nuevo proyecto, revisando todo y puliendo errores, y por fin ha llegado el día que la liberamos al público.
+				Una vez acabada la traducción, empezamos a revisarla, a pulir errores y a buscar un nuevo proyecto. Y ahora, sí que sí… ¡ha llegado el día en el que la presentamos al público!
 				<div class="title"><h1>¿Cómo aplico el parche?</h1></div>
-				Hay 4 métodos para parchear el juego, Hans, NTR, 3DS y CIA.<br>
+				Hay 4 métodos para parchear el juego: Hans, NTR, 3DS y CIA.<br>
 				Dependiendo de cuál elijas, tendrás que hacer un procedimiento u otro.<br>
 				Toda la información que necesitáis se encuentra en el PDF que contiene el parche.
 				<div class="title"><h1>He encontrado un error, ¿cómo puedo reportarlo?</h1></div>
@@ -70,9 +70,9 @@ window.cookieconsent.initialise({
 				El repositorio de github se encuentra <a href="https://github.com/Glowtranslations/StellaGlowESP">aquí</a>.<br>
 				Sigue las instrucciones del readme que hay para poder reportar el error.
 				<div class="title"><h1>El parcheador no funciona, ¿qué pasa?</h1></div>
-				Hemos añadido un nuevo apartado en el Github de Stella Glow para este tipo de casos, se encuentra <a href="https://github.com/Glowtranslations/StellaGlowESP#faq-de-errores-sobre-el-parcheador">aquí</a>.<br>
-				Si te ocurre un error que no aparece en el F.A.Q. avisanos desde el apartado de <a href="https://github.com/Glowtranslations/StellaGlowESP/issues">"Issues"</a> y te respondemos lo antes posible.
-				<div class="title"><h1>¿Donde puedo adquirir el juego?</h1></div>
+				Hemos añadido un nuevo apartado en el Github de Stella Glow para este tipo de casos. Se encuentra <a href="https://github.com/Glowtranslations/StellaGlowESP#faq-de-errores-sobre-el-parcheador">aquí</a>.<br>
+				Si encuentras un error que no aparece en el F.A.Q., avísanos desde el apartado de <a href="https://github.com/Glowtranslations/StellaGlowESP/issues">"Issues"</a> y te respondemos lo antes posible.
+				<div class="title"><h1>¿Dónde puedo adquirir el juego?</h1></div>
 				El juego lo puedes adquirir de manera digital o en físico.
 				<ul>
 					<li><a href="https://www.amazon.es/gp/product/B013WMW712">Amazon EUR (Físico)</a>
@@ -81,8 +81,8 @@ window.cookieconsent.initialise({
 					<li><a href="https://www.nintendo.com/games/detail/stella-glow-3ds">Nintendo eshop USA (Digital)</a>
 				</ul>
 				<div class="title"><h1>¡A disfrutar!</h1></div>
-				Como se ha mencionado antes, hemos tardado un año y medio en acabar la traducción, asi que no os vamos a entretener más.<br>
-				De parte de todo el equipo de GlowTranslations, deseamos que os lo paséis genial jugando este increíble juego, y daros las gracias por la increíble paciencia que habéis tenido y el apoyo que muchos de vosotros nos habéis brindado.<br>
+				Como se ha mencionado antes, hemos tardado un año y medio en acabar la traducción, así que no os vamos a entretener más.<br>
+				De parte de todo el equipo de GlowTranslations, os deseamos que lo paséis genial jugando a este increíble videojuego. También queremos daros la gracias por toda la paciencia que habéis tenido y el apoyo que muchos de vosotros nos habéis brindado ^^.<br>
 				<p style="text-align: center; font-size: 24px; font-weight: bold; text-decoration: underline;">¡A disfrutar!</p>
 			</div>
 		</div>
