--- a/translations/lordofmagna/informacion.html
+++ b/translations/lordofmagna/informacion.html
@@ -58,15 +58,15 @@ window.cookieconsent.initialise({
 			<div class="content-title">¡Lord of Magna: Maiden Heaven en español!</div>
 			<div class="content">
     <img onload="this.style.opacity='1';" src="../../images/lord-info.png" style="float: right; margin-right: -30px;">
-    Comenzando con la traducción de Rune Factory 4, nos ponemos manos a la obra con otro, un juego mas corto pero muy entretenido. <br>
-    Lord of Magna: Maiden Heaven, otro titulazo de la mano de yoshifumi hashimoto (otros titulos suyos son Rune Factory 4 y Story of seasons)   <br><br>
-    Aunque ya tenemos todo listo para empezar, le dedicaremos menos tiempo que al Rune Factory 4 ya que es un proyecto secundario.
+    Habiendo comenzado ya con la traducción de Rune Factory 4, nos ponemos manos a la obra con otro juego, que es más corto, pero igual de entretenido:  <br>
+    Lord of Magna: Maiden Heaven, otro titulazo de la mano de Yoshifumi Hashimoto (otros títulos suyos son Rune Factory 4 y Story of seasons).<br><br>
+    ¡Ya lo tenemos todo listo para empezar! Eso sí, le dedicaremos menos tiempo que al Rune Factory 4, ya que es un proyecto secundario.
     <div class="title"><h1>¿Habrá Demo como en el Stella Glow?</h1></div>
-    Al parecer, alguien del equipo de desarrollo de Lord of Magna decidió que no hace falta una demostración del juego, una pena la verdad, por desgracia no hacemos milagros, por lo que no podemos hacer un parche para una demo que no existe.<br>
+    Al parecer, alguien del equipo de desarrollo de Lord of Magna decidió que no hacía falta una demostración del juego. Una pena, la verdad. Por desgracia, no hacemos milagros, por lo que no podemos hacer un parche para una demo que no existe.<br>
     <div class="title"><h1>¿Cuánto durará la traducción?</h1></div>
-    El otro día llamamos a el servicio técnico de nuestra bola de cristal, la suya también esta estropeada y no son capaces de predecir cuándo vendrán a arreglar la nuestra, así que solo podemos decir que estará tan pronto como lo terminemos, tres meses, un año, una década, no lo sabemos, pero lo que sí sabemos es que cuanta más gente ayude antes estará :P<br>
+    El otro día llamamos a el servicio técnico de nuestra bola de cristal; la suya también esta estropeada y no son capaces de predecir cuándo vendrán a arreglar la nuestra. Así pues, solo podemos decir que la traducción estará tan pronto como la terminemos: tres meses, un año, una década… No lo sabemos, pero lo que sí sabemos es que cuanta más gente ayude, antes estará :P<br>
     <br>Aun así, si tanto te gusta el juego, puedes seguirnos en nuestra cuenta de <a href="https://www.twitter.com/glowtranslate">Twitter</a>.<br>
-   	<div class="title"><h1>¿Donde puedo adquirir el juego?</h1></div>
+   	<div class="title"><h1>¿Dónde puedo adquirir el juego?</h1></div>
 	El juego lo puedes adquirir de manera digital o en físico.
 		<ul>
 			<li><a href="https://www.amazon.com/Lord-Magna-Maiden-Heaven-Nintendo-3DS/dp/B00TKLFEVA/">Amazon USA (Físico)</a>
