fix de unos errores tipográficos

--- a/contactar.html
+++ b/contactar.html
@@ -57,7 +57,7 @@ window.cookieconsent.initialise({
 			<div class="content-title">Contacta con nosotros.</div>
 			<div class="content">
 				Si buscas información, necesitas ayuda, has encontrado algún error o quieres compartir algo con nosotros, aquí tienes la información de cómo contactarnos.<br><br>
-				Si has encontrado algún error, te agradeceríamos que al reportarlo fueses lo más explícito posible, mandando a poder ser capturas de pantalla e información acerca de cómo ha pasado y dónde ha pasado. Con estos datos podremos detectar el fallo y arreglarlo..<br><br>
+				Si has encontrado algún error, te agradeceríamos que al reportarlo fueses lo más explícito posible, mandando a poder ser capturas de pantalla e información acerca de cómo ha pasado y dónde ha pasado. Con estos datos podremos detectar el fallo y arreglarlo.<br><br>
 				Escribe de la forma más correcta posible, sin faltas y con acentos; una buena ortografía nos hará interesarnos más en ti.<br><br>
 				Si quieres compartir algo con nosotros, puedes hacerlo en twitter o en el hilo oficial de GlowTranslations en ElOtroLado.net. 
 			</div>
