--- a/translations/persona4/informacion.html
+++ b/translations/persona4/informacion.html
@@ -65,7 +65,7 @@ window.cookieconsent.initialise({
     <div class="title"><h1>¿Habrá Demo como en el Stella Glow?</h1></div>
     Siendo un juego de PS2, pocas veces hay demos que se distribuyan de manera gratuita, pero, por desgracia, este juego no contiene una demo así que no podemos distribuir una demo traducida.<br>
     <div class="title"><h1>¿Cuánto durará la traducción?</h1></div>
-    El otro día llamamos a el servicio técnico de nuestra bola de cristal; la suya también esta estropeada y no son capaces de predecir cuándo vendrán a arreglar la nuestra. Así pues, solo podemos decir que la traducción estará tan pronto como la terminemos: tres meses, un año, una década… No lo sabemos, pero lo que sí sabemos es que cuanta más gente ayude, antes estará :P<br>
+    El otro día llamamos al servicio técnico de nuestra bola de cristal; la suya también esta estropeada y no son capaces de predecir cuándo vendrán a arreglar la nuestra. Así pues, solo podemos decir que la traducción estará tan pronto como la terminemos: tres meses, un año, una década… No lo sabemos, pero lo que sí sabemos es que cuanta más gente ayude, antes estará :P<br>
     <br>Aun así, si tanto te gusta el juego, puedes seguirnos en nuestra cuenta de <a href="https://www.twitter.com/glowtranslate">Twitter</a>.<br>
    	<div class="title"><h1>¿Dónde puedo adquirir el juego?</h1></div>
 	El juego lo puedes adquirir en físico.
