--- a/translations/lordofmagna/informacion.html
+++ b/translations/lordofmagna/informacion.html
@@ -64,7 +64,7 @@ window.cookieconsent.initialise({
     <div class="title"><h1>¿Habrá Demo como en el Stella Glow?</h1></div>
     Al parecer, alguien del equipo de desarrollo de Lord of Magna decidió que no hacía falta una demostración del juego. Una pena, la verdad. Por desgracia, no hacemos milagros, por lo que no podemos hacer un parche para una demo que no existe.<br>
     <div class="title"><h1>¿Cuánto durará la traducción?</h1></div>
-    El otro día llamamos a el servicio técnico de nuestra bola de cristal; la suya también esta estropeada y no son capaces de predecir cuándo vendrán a arreglar la nuestra. Así pues, solo podemos decir que la traducción estará tan pronto como la terminemos: tres meses, un año, una década… No lo sabemos, pero lo que sí sabemos es que cuanta más gente ayude, antes estará :P<br>
+    El otro día llamamos al servicio técnico de nuestra bola de cristal; la suya también esta estropeada y no son capaces de predecir cuándo vendrán a arreglar la nuestra. Así pues, solo podemos decir que la traducción estará tan pronto como la terminemos: tres meses, un año, una década… No lo sabemos, pero lo que sí sabemos es que cuanta más gente ayude, antes estará :P<br>
     <br>Aun así, si tanto te gusta el juego, puedes seguirnos en nuestra cuenta de <a href="https://www.twitter.com/glowtranslate">Twitter</a>.<br>
    	<div class="title"><h1>¿Dónde puedo adquirir el juego?</h1></div>
 	El juego lo puedes adquirir de manera digital o en físico.
