Fix título de progresos

--- a/translations/lordofmagna/progresos.html
+++ b/translations/lordofmagna/progresos.html
@@ -11,7 +11,7 @@
 	<meta property="og:title" content="Glowtranslations - Lord of Magna: Maiden Heaven - Progresos"/>
 	<meta property="og:description" content="Progresos de la traducción de Lord of Magna: Maiden Heaven."/>
 	<meta property="og:image" content="http://glowtranslations.tk/images/metalord.jpg"/>
-	<title>GlowTranslations - Lord of Magna: Maiden Heaven - Información</title>
+	<title>GlowTranslations - Lord of Magna: Maiden Heaven - Progresos</title>
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../../favicon-32x32.png">
