Actualizado los créditos de lord

--- a/translations/lordofmagna/miembros.html
+++ b/translations/lordofmagna/miembros.html
@@ -129,6 +129,12 @@ window.cookieconsent.initialise({
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Elaine.jpg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
+				<div class="credits-container"> 
+					<div class="credits-name">Sonicus</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Sonicus.png" style="width: 100px; height: 100px;">
+					</div>
+				</div>
 				<div style="clear: both;"></div>
 				<div class="title"><h1>Corrección</h1></div>
 				<div class="credits-container"> 
@@ -153,6 +159,12 @@ window.cookieconsent.initialise({
 					<div class="credits-name">Erena</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Erena.jpg" style="width: 100px; height: 100px;">
+					</div>
+				</div>
+				<div class="credits-container"> 
+					<div class="credits-name">Sonicus</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Sonicus.png" style="width: 100px; height: 100px;">
 					</div>
 				</div>
 				<div style="clear: both;"></div>
@@ -181,6 +193,44 @@ window.cookieconsent.initialise({
 					<div class="credits-name">Xppancho</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Xppancho.jpg" style="width: 100px; height: 100px;">
+					</div>
+				</div>
+				<div class="credits-container"> 
+					<div class="credits-name">Sonicus</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Sonicus.png" style="width: 100px; height: 100px;">
+					</div>
+				</div>
+				<div style="clear: both;"></div>
+				<div class="title"><h1>Betatesters</h1></div>
+				<div class="credits-container"> 
+					<div class="credits-name">Xppancho</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Xppancho.jpg" style="width: 100px; height: 100px;">
+					</div>
+				</div>
+				<div class="credits-container"> 
+					<div class="credits-name">Darkmet98</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Darkmet.jpg" style="width: 100px; height: 100px;">
+					</div>
+				</div>
+				<div class="credits-container"> 
+					<div class="credits-name">Lilia.~</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Lilia.~.jpg" style="width: 100px; height: 100px;">
+					</div>
+				</div>
+				<div class="credits-container"> 
+					<div class="credits-name">Sorium</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Sorium.jpeg" style="width: 100px; height: 100px;">
+					</div>
+				</div>
+				<div class="credits-container"> 
+					<div class="credits-name">Sonicus</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Sonicus.png" style="width: 100px; height: 100px;">
 					</div>
 				</div>
 				<div style="clear: both;"></div>
