Añadido la guía y actualizado los temas de 3ds

--- a/translations/stellaglow/descargas.html
+++ b/translations/stellaglow/descargas.html
@@ -111,10 +111,18 @@ window.cookieconsent.initialise({
 				<div class="download-container">
 					<div class="download-version">Tema personalizado para 3DS</div>
 					<div class="download-buttons">
-						<a href="https://3dsthem.es/8254"><div class="mediafire">3DSThemes</div></a>
+						<a href="https://themeplaza.eu/item/4101"><div class="mediafire">Themeplaza</div></a>
 						<a href="https://drive.google.com/open?id=0BxU80RyKLHhkQkhmc0Z5R1BVY0E"><div class="Drive">Drive</div></a>
 					</div>
-					<div class="download-changelog">- Tema de Stella Glow para 3DS, se aplica con <a href="https://gbatemp.net/threads/release-chmm2-custom-home-menu-manager-2.397543/">CHMM2</a></div>
+					<div class="download-changelog">- Tema de Stella Glow para 3DS, se aplica con <a href="https://gbatemp.net/threads/release-anemone3ds-a-complete-theme-and-splash-manager-for-your-3ds.482804/">Anemone</a></div>
+				</div>
+				<div class="download-container">
+					<div class="download-version">Miniguía para Stella Glow</div>
+					<div class="download-buttons">
+						<a href="https://github.com/Glowtranslations/StellaGlowESP/blob/master/documents/Stella%20Glow%20-%20Minigu%C3%ADa%20en%20espa%C3%B1ol%20[GlowTranslations].pdf"><div class="github">Github</div></a>
+						<a href="https://drive.google.com/file/d/1oMmvIX9VnlpLUxd_bO1VS7OBRTDYwreZ/view?usp=sharing"><div class="Drive">Drive</div></a>
+					</div>
+					<div class="download-changelog">-Miniguía para el juego Stella Glow</a></div>
 				</div>
 		      </div>
 		</div>
