Actualizada la web

--- a/translations/lordofmagna/descargas.html
+++ b/translations/lordofmagna/descargas.html
@@ -8,10 +8,11 @@
 	gtag('js', new Date());
 	gtag('config', 'UA-76928300-1');
 	</script>
-	<meta property="og:title" content="Glowtranslations - Lord of Magna: Maiden Heaven - Progresos"/>
-	<meta property="og:description" content="Progresos de la traducción de Lord of Magna: Maiden Heaven."/>
+	<meta property="og:title" content="Glowtranslations - Lord of Magna: Maiden Heaven - Descargas"/>
+	<meta property="og:description" content="Descargas de la traducción de Lord of Magna: Maiden Heaven."/>
 	<meta property="og:image" content="http://glowtranslations.tk/images/metalord.jpg"/>
-	<title>GlowTranslations - Lord of Magna: Maiden Heaven - Progresos</title>
+	<title>GlowTranslations - Lord of Magna: Maiden Heaven - Descargas</title>
+	<link rel="stylesheet" type="text/css" href="downloads.css">
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../../favicon-32x32.png">
@@ -49,34 +50,42 @@ window.cookieconsent.initialise({
 })});
 </script>
 </head>
-<body class="body-LOM Progresos traducciones">
+<body class="body-LOM descargas traducciones">
 	<div class="main-body">
 		<script src="../../menus.js"></script>
 		 <div class="main-menu" id="main-menu"></div>
 		<div class="second-bar" id="second-bar"><a href="../../index.html"><div class="logo"></div></a></div>
 		<div class="content-container">
-			<div class="content-title">Progresos</div>
-			<div class="content">
-				<b><u>¿Qué está traducido? </u></b><br>
-				Actualmente esta traducido: La historia, las conversaciones, las relaciones, los objetos, las localizaciones, la interfaz, vídeos, las habilidades y magias. <br><br>
-				<b><u>¿Qué falta por traducir? </u></b><br>
-				Actualmente, falta por traducir: ¡Nada! <br><br>
-			    <b><u>¿Cómo puedo revisar exactamente lo que lleváis traducido? </u></b><br>
-				Muy fácil, en la tabla que se muestra abajo puedes consultar los avances de la traducción, lo iremos actualizando de vez en cuando. <br><br>
-				<table class='progress'>
-				<tr>
-				<td class='title'>Sección</td><td class='title'>Traducido</td><td class='title'>Corregido</td><td class='title'>Testeado</td>
-				</tr>
-				<tr><td>Historia</td><td class='yes'>100%</td><td class='yes'>100%</td><td class='wip'>70%</td></tr>
-				<tr><td>Conversaciones</td><td class='yes'>100%</td><td class='yes'>100%</td><td class='wip'>50%</td></tr>
-				<tr><td>Relaciones</td><td class='yes'>100%</td><td class='yes'>100%</td><td class='wip'>40%</td></tr>
-				<tr><td>Objetos</td><td class='yes'>100%</td><td class='yes'>100%</td><td class='yes'>100%</td></tr>
-				<tr><td>Localizaciones</td><td class='yes'>100%</td><td class='yes'>100%</td><td class='wip'>60%</td></tr>
-				<tr><td>Habilidades y magias</td><td class='yes'>100%</td><td class='yes'>100%</td><td class='wip'>90%</td></tr>
-				<tr><td>Vídeos</td><td class='yes'>100%</td><td class='yes'>100%</td><td class='yes'>100%</td></tr>
-				<tr><td>Interfaz</td><td class='yes'>100%</td><td class='yes'>100%</td><td class='wip'>95%</td></tr>
-				</table>
-   </div>
+			<div class="content-title">Descargas</div>
+			<img onload="this.style.opacity='1';" src="../../images/DescargaLOM.png">
+			<div class="download-header">Traducción juego completo Lord Of Magna: Maiden Heaven</div>
+				<div class="download-container">
+					<div class="download-version">Juego completo V1</div>
+					<div class="download-buttons">
+						<a href="#"><div class="mega">Mega</div></a>
+						<a href="#"><div class="mediafire">Mediafire</div></a>
+						<a href="#"><div class="Drive">Drive</div></a>
+						<a href="#"><div class="github">Github</div></a>
+					</div>
+					<div class="download-changelog">- Versión inicial</div>
+				</div>
+			<div class="download-header">Extras</div>
+				<div class="download-container">
+					<div class="download-version">Tema personalizado para 3DS</div>
+					<div class="download-buttons">
+						<a href="#"><div class="mediafire">Themeplaza</div></a>
+						<a href="#"><div class="Drive">Drive</div></a>
+					</div>
+					<div class="download-changelog">- Tema de Lord of Magna: Maiden Heaven para 3DS, se aplica con <a href="https://gbatemp.net/threads/release-anemone3ds-a-complete-theme-and-splash-manager-for-your-3ds.482804/">Anemone</a></div>
+				</div>
+				<div class="download-container">
+					<div class="download-version">Guía para Lord Of Magna: Maiden Heaven</div>
+					<div class="download-buttons">
+						<a href="#"><div class="github">Github</div></a>
+						<a href="#"><div class="Drive">Drive</div></a>
+					</div>
+					<div class="download-changelog">-Guía para el juego Lord Of Magna: Maiden Heaven</a></div>
+				</div>
 		</div>
 		<div style="height:100px;"></div>
 		<div class="footer" id="footer"></div>
