--- a/translations/persona4/progresos.html
+++ b/translations/persona4/progresos.html
@@ -60,7 +60,7 @@ window.cookieconsent.initialise({
 				<b><u>¿Qué está traducido? </u></b><br>
 				Actualmente esta traducido: Nada <br><br>
 				<b><u>¿Qué falta por traducir? </u></b><br>
-				Actualmente, falta por traducir: La historia, conversaciones/entorno, relaciones, objetos/equipo, compedio, habilidades, vídeos y interfaz. <br><br>
+				Actualmente, falta por traducir: La historia, conversaciones/entorno, vínculos, objetos/equipo, compedio, habilidades, vídeos y interfaz. <br><br>
 			    <b><u>¿Cómo puedo revisar exactamente lo que lleváis traducido? </u></b><br>
 				Muy fácil, en la tabla que se muestra abajo puedes consultar los avances de la traducción, lo iremos actualizando de vez en cuando. <br><br>
 				<table class='progress'>
@@ -69,18 +69,18 @@ window.cookieconsent.initialise({
 				</tr>
 				<tr><td>Historia</td><td class='wip'>2%</td><td class='no'>0%</td><td class='no'>0%</td></tr>
 				<tr><td>Conversaciones/Entorno</td><td class='wip'>5%</td><td class='no'>0%</td><td class='no'>0%</td></tr>
-				<tr><td>Relaciones (S.Links)</td><td class='no'>0%</td><td class='no'>0%</td><td class='no'>0%</td></tr>
+				<tr><td>Vínculos (S.Links)</td><td class='no'>0%</td><td class='no'>0%</td><td class='no'>0%</td></tr>
 				<tr><td>Objetos/Equipo</td><td class='no'>0%</td><td class='no'>0%</td><td class='no'>0%</td></tr>
 				<tr><td>Compedio</td><td class='no'>0%</td><td class='no'>0%</td><td class='no'>0%</td></tr>
 				<tr><td>Habilidades</td><td class='no'>0%</td><td class='no'>0%</td><td class='no'>0%</td></tr>
 				<tr><td>Vídeos</td><td class='wip'>15%</td><td class='no'>0%</td><td class='no'>0%</td></tr>
-				<tr><td>Interfaz</td><td class='wip'>55%</td><td class='no'>0%</td><td class='no'>0%</td></tr>
+				<tr><td>Interfaz</td><td class='wip'>60%</td><td class='no'>0%</td><td class='no'>0%</td></tr>
 				</table>
    </div>
 		</div>
 		<div style="height:100px;"></div>
 		<div class="footer" id="footer"></div>
-		<script src="../../js/menus.js" onload="mainMenu(), lordofMagnaSubMenu(), footer()"></script>
+		<script src="../../js/menus.js" onload="mainMenu(), persona4SubMenu(), footer()"></script>
 	</div>
 </body>
 </html>
