--- a/translations/runefactory4/galeria.html
+++ b/translations/runefactory4/galeria.html
@@ -290,7 +290,8 @@ window.cookieconsent.initialise({
     </div>
   </div>
 </div>
-<center><iframe width="560" height="315" src="https://www.youtube.com/embed/ITZgMBU986c" frameborder="0" allowfullscreen></iframe></center>
+<center><iframe width="890" height="512" src="https://www.youtube.com/embed/ITZgMBU986c" frameborder="0" allowfullscreen></iframe><br><br>
+<iframe width="890" height="512" src="https://www.youtube.com/embed/jqf0oHICPRw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></iframe></center>
 			</div>
 		</div>
 		<div style="height:100px;"></div>
