--- a/translations/stellaglow/creditos.html
+++ b/translations/stellaglow/creditos.html
@@ -181,6 +181,26 @@ window.cookieconsent.initialise({
 					</div>
 				</div>
 				<div style="clear: both;"></div>
+				<div class="title"><h1>Vídeos</h1></div>
+				<div class="credits-container"> 
+					<div class="credits-name">Darkmet98</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Darkmet.jpg" style="width: 100px; height: 100px;">
+					</div>
+				</div>
+				<div class="credits-container"> 
+					<div class="credits-name">Alexiiius</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Alexiiius.jpg" style="width: 100px; height: 100px;">
+					</div>
+				</div>
+				<div class="credits-container"> 
+					<div class="credits-name">Xppancho</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Xppancho.jpg" style="width: 100px; height: 100px;">
+					</div>
+				</div>
+				<div style="clear: both;"></div>
 				<div class="title"><h1>Han ayudado o tenido un papel importante en el proyecto</h1></div>
 				<div class="credits-container"> 
 					<div class="credits-name">Keizel</div>
