--- a/translations/lordofmagna/galeria.html
+++ b/translations/lordofmagna/galeria.html
@@ -274,7 +274,8 @@ window.cookieconsent.initialise({
     </div>
   </div>
 </div>
-<center><iframe width="560" height="315" src="https://www.youtube.com/embed/FIDzjw0g5Ko?rel=0" frameborder="0" allowfullscreen></iframe></center>
+<center><iframe width="890" height="512" src="https://www.youtube.com/embed/FIDzjw0g5Ko?rel=0" frameborder="0" allowfullscreen></iframe><br><br>
+<iframe width="890" height="512" src="https://www.youtube.com/embed/BzjBsxbmY3U?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></center>
 			</div>
 		</div>
 		<div style="height:100px;"></div>
