--- a/translations/persona4/galeria.html
+++ b/translations/persona4/galeria.html
@@ -192,7 +192,8 @@ window.cookieconsent.initialise({
     </div>
   </div>
 </div>
-<center><iframe width="890" height="512" src="https://www.youtube.com/embed/ajmh-K9_Qcs" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe></center><br><br>
+<center><iframe width="890" height="512" src="https://www.youtube.com/embed/ajmh-K9_Qcs" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe><br><br>
+<iframe width="890" height="512" src="https://www.youtube.com/embed/hxQ27L_OmFA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></center>
 
 			</div>
 		</div>
