--- a/translations/stellaglow/galeria.html
+++ b/translations/stellaglow/galeria.html
@@ -251,7 +251,9 @@ window.cookieconsent.initialise({
     </div>
   </div>
 </div>
-<center><iframe width="560" height="315" src="https://www.youtube.com/embed/zRTX-QB8rUo?rel=0" frameborder="0" allowfullscreen></iframe></center>
+<center><iframe width="890" height="512" src="https://www.youtube.com/embed/zRTX-QB8rUo?rel=0" frameborder="0" allowfullscreen></iframe><br><br>
+<iframe width="890" height="512" src="https://www.youtube.com/embed/3nT62uOfElg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe><br><br>
+<iframe width="890" height="512" src="https://www.youtube.com/embed/lW8bAeROUG4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></center>
 			</div>
 		</div>
 		<div style="height:100px;"></div>
