Actualizado los créditos y progresos de LOM

--- a/translations/lordofmagna/miembros.html
+++ b/translations/lordofmagna/miembros.html
@@ -216,9 +216,9 @@ window.cookieconsent.initialise({
 					</div>
 				</div>
 				<div class="credits-container"> 
-					<div class="credits-name">Lilia.~</div>
+					<div class="credits-name">Eliden</div>
 					<div class="credits-avatar">
-						<img onload="this.style.opacity='1';" src="../../images/avatars/Lilia.~.jpg" style="width: 100px; height: 100px;">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Eliden.jpg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
 				<div class="credits-container"> 
